--- a/PartA.ipynb
+++ b/PartA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPG5uncCpOIQskpx4YMDxca",
+      "authorship_tag": "ABX9TyNKt2BGHSFah6O+zPsEobup",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,8 +14,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -39,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -183,10 +182,75 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "fcFvuynnYpOI"
+        "id": "xiaO_-6ncNOB"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from torchvision import datasets, transforms\n",
+        "from torch.utils.data import DataLoader\n",
+        "import torch\n",
+        "import os\n",
+        "from google.colab import drive\n",
+        "\n",
+        "drive.mount('/content/drive', force_remount=True)\n",
+        "\n",
+        "# Extract dataset\n",
+        "zip_path = \"/content/drive/MyDrive/nature_12K.zip\"\n",
+        "data_dir = \"/content/nature_12K\"\n",
+        "if not os.path.exists(data_dir):\n",
+        "    !cp \"{zip_path}\" .\n",
+        "    !unzip -q nature_12K.zip\n",
+        "    !rm nature_12K.zip\n",
+        "\n",
+        "def compute_mean_std(data_dir, input_size=224):\n",
+        "    transform = transforms.Compose([\n",
+        "        transforms.Resize((input_size, input_size)),\n",
+        "        transforms.ToTensor()\n",
+        "    ])\n",
+        "    dataset = datasets.ImageFolder(root=data_dir, transform=transform)\n",
+        "    loader = data.DataLoader(dataset, batch_size=64, shuffle=False, num_workers=4)\n",
+        "\n",
+        "    mean = torch.zeros(3)\n",
+        "    std = torch.zeros(3)\n",
+        "    total_images = 0\n",
+        "\n",
+        "    for images, _ in loader:\n",
+        "        batch_samples = images.size(0)  # batch size\n",
+        "        images = images.view(batch_samples, 3, -1)  # Flatten spatial dimensions\n",
+        "        mean += images.mean(dim=[0, 2])  # Compute mean per channel\n",
+        "        std += images.std(dim=[0, 2])  # Compute std per channel\n",
+        "        total_images += batch_samples\n",
+        "\n",
+        "    mean /= len(loader)\n",
+        "    std /= len(loader)\n",
+        "    return mean.tolist(), std.tolist()\n",
+        "\n",
+        "# Compute and print values\n",
+        "data_dir_train = os.path.join(data_dir, \"train\")\n",
+        "inat_mean, inat_std = compute_mean_std(data_dir_train)\n",
+        "print(f\"Mean: {inat_mean}, Std: {inat_std}\")"
+      ],
+      "metadata": {
+        "id": "fcFvuynnYpOI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1bf258f5-07e7-4300-cda5-58c42f8a1d61"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ]
     }
   ]
 }
