--- a/PartB.ipynb
+++ b/PartB.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1337,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1708,12 +1708,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "BpzY6kVYJ2CX"
+   },
+   "source": [
+    "### Inferences: Fine-Tuning vs Training from Scratch\n",
+    "\n",
+    "- Fine-tuning a large pretrained model (**ResNet50**) significantly outperformed training a custom CNN from scratch, even with fewer training epochs.\n",
+    "- While training from scratch achieved a test accuracy of **41.95%**, fine-tuning the pretrained model using the **last_block** strategy nearly **doubled the accuracy** to **84.05%**.\n",
+    "- The **last_block** strategy was selected after evaluating all three strategies (head-only, partial, last_block) on **200 training samples per class**, and choosing the one that yielded the **highest validation accuracy**.\n",
+    "- Fine-tuning leverages the **transfer of general visual features** learned from large-scale datasets (e.g., ImageNet), resulting in **faster convergence** and **better generalization**.\n",
+    "- The **last_block** strategy offers a good trade-off between **computational efficiency** and **performance**, avoiding the risks of overfitting or instability from full-network fine-tuning while still allowing adaptation of the deeper, more task-specific layers.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "MzvXXg9hkAi8"
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "MzvXXg9hkAi8",
+    "outputId": "af1cbe33-1394-48df-af0d-c29c36dc5477"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mounted at /content/drive\n",
+      "Removed 'metadata.widgets'\n",
+      "Saved cleaned notebook\n"
+     ]
+    }
+   ],
    "source": [
     "import nbformat\n",
     "from google.colab import drive\n",
